# bevy_capture

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: simple.rs
src/: lib.rs  render_world.rs
src/encoder/: frames.rs  gif.rs  mod.rs  mp4_ffmpeg_cli.rs  mp4_openh264.rs
