[package]
name = "bevy_capture"
description = "A Bevy plugin for capturing frames from a Bevy application."
version = "0.1.1"
edition = "2021"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
repository = "https://github.com/jannik4/bevy_capture"
license = "MIT OR Apache-2.0"

[features]
default = []
gif = ["image/gif"]
mp4_openh264 = ["dep:mp4", "dep:openh264"]
mp4_ffmpeg_cli = ["dep:tempdir"]

[dependencies]
bevy = { version = "0.14.1", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
] }
crossbeam-channel = "0.5.13"
image = { version = "0.25.2", default-features = false }

# mp4_openh264
mp4 = { version = "0.14.0", optional = true }
openh264 = { version = "0.6.2", optional = true }

# mp4_ffmpeg_cli
tempdir = { version = "0.3.7", optional = true }

[dev-dependencies]
bevy = "0.14.1"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "simple"
required-features = ["gif", "mp4_openh264", "mp4_ffmpeg_cli"]
